--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
-!<!DOCTYPE html>
+!
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>facebook</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -35,24 +37,15 @@
                 <button type="submit" id="">Sign in</button>
                 <br>
                 <button type="submit" id="forget">forgotten password?</button>
+                
                 <br>
-
                 <br>
                 <hr>
                 <br>
-                <button type="submit" id="Create">Create New Account</button>
-
+                <a href="signUp.html" class="ptn-prime">Create New Account</a>
+            </form>
         </div>
     </section>
 </body>
 
 </html>
-
-
-
-
-
-
-
-
-
